--- a/src/locales/az/translation.json
+++ b/src/locales/az/translation.json
@@ -33,5 +33,32 @@
   "returnPolicy": "7 gün geri qaytarma siyasəti",
   "legalPrivacy": "Hüquq və Məxfilik",
   "termsCondition": "Qaydalar və Şərtlər",
-  "cancel": "Ləğv və Geri Ödəniş Siyasəti"
+  "cancel": "Ləğv və Geri Ödəniş Siyasəti",
+  "trade": "Ticarət Siyasəti",
+  "shippingPolicy": "Çatdırılma Siyasəti",
+  "privacyPolicy": "Məxfilik Siyasəti",
+  "needHelp": "Kömək Lazımdır?",
+  "myAccount": "Mənim Hesabım",
+  "myOrders": "Sifarişlərim",
+  "wallet": "Pul kisəsi",
+  "connectUs": "Bizimlə əlaqə saxlayın",
+  "aboutUs": "Haqqımızda",
+  "emptyCart": "Səbətiniz Boşdur",
+  "cart": "Səbət",
+  "totalItems": "Bütün Produktlar",
+  "quantity": "Sayı",
+  "removeItem": "Produktu Sil",
+  "totalPrice": "Ümumi Qiymət",
+  "clearCart": "Səbəti Təmizlə",
+  "save51": "51% qənaət edin",
+  "userInformation": "Istifadəçi Məlumatları",
+  "name": "Ad",
+  "email": "E-Poçt",
+  "logout": "Çıxış",
+  "nouser": "Heç bir istifadəçi məlumatı tapılmadı",
+  "searchGame": "İstədiyiniz oyunu axtarın",
+  "addToCart": "Səbətə Əlavə Edin",
+  "productAdd": "Produkt Səbətə Əlavə Olundu",
+  "productAddSell": "Məhsul Satış Səbətinə Əlavə edildi!",
+  "nowSell": "İndi Siz Məhsulunuzu Satabilirsiniz"
 }
