--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,5 +33,32 @@
   "returnPolicy": "7 Days return policy",
   "legalPrivacy": "Legal & Privacy",
   "termsCondition": "Terms and Condition",
-  "cancel": "Cancellation & Refund Policy"
+  "cancel": "Cancellation & Refund Policy",
+  "trade": "Trade In Policy",
+  "shippingPolicy": "Shipping Policy",
+  "privacyPolicy": "Privacy Policy",
+  "needHelp": "Need Help",
+  "myAccount": "My Account",
+  "myOrders": "My Orders",
+  "wallet": "Wallet",
+  "connectUs": "Connect With Us",
+  "aboutUs": "About Us",
+  "emptyCart": "Your Cart is Empty",
+  "cart": "Cart",
+  "totalItems": "Total Items",
+  "quantity": "Quantity",
+  "removeItem": "Remove Item",
+  "totalPrice": "Total Price",
+  "clearCart": "Clear Cart",
+  "save51": "Save 51%",
+  "userInformation": "User Information",
+  "name": "Name",
+  "email": "Email",
+  "logout": "Log Out",
+  "nouser": "No user data found",
+  "searchGame": "Search any game you want",
+  "addToCart": "Add To Cart",
+  "productAdd": "Product Added to Cart",
+  "productAddSell": "Product Added to Sell Cart!",
+  "nowSell": "Now You Can Sell Your Product"
 }
