--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -33,5 +33,32 @@
   "returnPolicy": "Политика возврата в течение 7 дней",
   "legalPrivacy": "Правовые вопросы и конфиденциальность",
   "termsCondition": "Условия и положения",
-  "cancel": "Политика отмены и возврата средств"
+  "cancel": "Политика отмены и возврата средств",
+  "trade": "Политика обмена",
+  "shippingPolicy": "Политика доставки",
+  "privacyPolicy": "политика конфиденциальности",
+  "needHelp": "Нужна помощь",
+  "myAccount": "Мой счет",
+  "myOrders": "Мои заказы",
+  "wallet": "Кошелек",
+  "connectUs": "Свяжитесь с нами",
+  "aboutUs": "О нас",
+  "emptyCart": "Ваша корзина пуста",
+  "cart": "Корзина",
+  "totalItems": "Всего предметов",
+  "quantity": "Количество",
+  "removeItem": "Удалить элемент",
+  "totalPrice": "Общая цена",
+  "clearCart": "Очистить корзину",
+  "save51": "Сэкономьте 51%",
+  "userInformation": "Информация о пользователе",
+  "name": "Имя",
+  "email": "Электронная почта",
+  "logout": "Выйти",
+  "nouser": "Данные пользователя не найдены",
+  "searchGame": "Поиск любой игры, которую вы хотите",
+  "addToCart": "Добавить в корзину",
+  "productAdd": "Товар добавлен в корзину",
+  "productAddSell": "Товар добавлен в корзину!",
+  "nowSell": "Теперь вы можете продавать свой продукт"
 }
