--- a/src/locales/az/translation.json
+++ b/src/locales/az/translation.json
@@ -60,5 +60,37 @@
   "addToCart": "Səbətə Əlavə Edin",
   "productAdd": "Produkt Səbətə Əlavə Olundu",
   "productAddSell": "Məhsul Satış Səbətinə Əlavə edildi!",
-  "nowSell": "İndi Siz Məhsulunuzu Satabilirsiniz"
+  "nowSell": "İndi Siz Məhsulunuzu Satabilirsiniz",
+  "keepGoing": "Davam et",
+  "whoWeAre": "Biz Kimik?",
+  "longText": "Biz oyunçulara sərfəli və xoş oyun təcrübəsi təqdim etmək üçün inkişaf edən ehtiraslı oyunçular və peşəkarlardan ibarət komandayıq. Oyun sənayesi uzun müddət varlılar üçün bahalı bir avocation kimi təqdim edilmişdir. Biz bu tabu və stiqmanı qırmaq istəyirik. Biz oyunçuları gücləndirmək istəyirik. Biz oyunçuların ciblərini və ürəklərini boşaltmadan bu sənayenin ən yaxşısını yaşamasını istəyirik.",
+  "longText2": "Gördüyümüz bu səylərin hamısı, əslində, oyunlara, konsollara və periferiyalara asan və sərfəli çıxışı olan böyük bir icma olan oyunçuların ekosistemini yaratmaq istiqamətində qızğın və vicdanlı səydir.",
+  "ourOfferings": "Təkliflərimiz",
+  "best": "Sinifinin ən yaxşı konsolları, oyunları və aksesuarları",
+  "longText3": "Yeni və ya köhnə konsollar və oyunlar üçün bazardasınızsa, bütün əsaslarınızı əhatə etdik. Sony-nin ən yaxşılarından Nintendo və Microsoft-un ən son təqdimatlarına qədər bizdə polis etmək istədiyiniz hər şey var. Məhsullarımızda endirimli qiymətlərlə yanaşı, ölkə üzrə pulsuz çatdırılma və seçilmiş şəhərlərə 1 günlük çatdırılma təklif edirik.",
+  "sellYourOld": "Köhnə oyunlarınızı və konsollarınızı satın",
+  "longText4": "Köhnə oyunlarınızı və ya konsollarınızı yükləmək istədiyiniz zaman sizi açıq qollarla qarşılayırıq. Köhnə oyunlarınızı və konsollarınızı nağd pula və ya ticarətiniz üçün kreditlə sata bilərsiniz. Gamenation-da biz həmçinin köhnə oyun kompüterinizin periferiya cihazlarını və komponentlərini nağd və ya kreditlə sata biləcəyiniz yeni xidmətə başlayırıq.",
+  "ourPillars": "Bizim Sütunlarımız",
+  "customerObsession": "Müştəri vəsvəsəsi: Biz istəyirik ki, müştərilərimiz hər zaman pul üçün mütləq dəyər əldə etdiklərini hiss etsinlər və düşünsünlər.",
+  "valueForMoney": "Pul üçün dəyər: Hər bir yenilik. Hər iterasiya. Burada Gamenation-da etdiyimiz hər şey yalnız müştəri məmnuniyyəti ətrafında cəmlənir. Bizimlə əməliyyat apararkən müştərilərimizə ən təmiz və ən yaxşı istifadəçi səyahətini təqdim etməyi hədəfləyirik.",
+  "passion": "Ehtiras: 'Ehtiras'ın təşkilatımızın təməlini təşkil etdiyini söyləmək etməkdən daha asandır. Üzərində işlədiyimiz yeni xidmət və ya işə götürdüyümüz yeni işçi olsun, biz əminik ki, ehtiras bizim bütün səylərimizin əsasını təşkil edir.",
+  "evolution": "Təkamül: Bizim təməl daşlarımızdan biri daimi öyrənmə və təkamül vəziyyətində olmaqdır. Hər addımda yeniliklər edərək, xidmətlərimizi və təkliflərimizi təkmilləşdirməyə çalışırıq.",
+  "affordable": "Əlverişli və Əlçatanlıq Orta demək deyil: Oyun Konsolları, Oyun kompüterləri və ya Oyunların ümumiyyətlə varlılar üçün yaratdığı stiqma bizim daim pozmağa çalışdığımız bir tabudur.",
+  "loggedOut": "Hesabdan uğurla çıxdı",
+  "loginSuccessfull": "Giriş Uğurlu oldu",
+  "loginFailed": "Giriş uğursuz oldu",
+  "invalidEmail": "Yanlış e-poçt və ya parol",
+  "login": "DAXIL OL",
+  "notRegistered": "Hələ qeydiyyatdan keçməmisiniz?",
+  "registerHere": "Buradan qeydiyyatdan keçin",
+  "fill": "Zəhmət olmasa bütün sahələri doldurun",
+  "registerFail": "Qeydiyyat uğursuz oldu",
+  "alreadyRegister": "Bu e-poçt artıq qeydiyyatdan keçib. Fərqli e-poçt ünvanından istifadə edin",
+  "registerSuccess": "Uğurla Qeydiyyatdan Keçdiniz",
+  "register": "Qeydiyyatdan Keç",
+  "alreadyRegistered": "Artıq Qeydiyyatdan Keçmişdir",
+  "loginHere": "Buradan daxil olun",
+  "surname": "Soyad",
+  "password": "Parol",
+  "signIn": "Daxil olun"
 }
