--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -60,5 +60,37 @@
   "addToCart": "Add To Cart",
   "productAdd": "Product Added to Cart",
   "productAddSell": "Product Added to Sell Cart!",
-  "nowSell": "Now You Can Sell Your Product"
+  "nowSell": "Now You Can Sell Your Product",
+  "keepGoing": "Keep Going",
+  "whoWeAre": "Who We Are?",
+  "longText": "We are a team of passionate gamers and professionals who thrive to provide gamers an affordable and enjoyable gaming experience. The Gaming Industry has been long touted as an expensive avocation for the wealthy. We want to break this taboo and stigma. We want to empower gamers. We want gamers to experience the very best of this industry without having to empty their pockets and hearts out.",
+  "longText2": "All of these endeavours we undertake is an ardent and honest effort towards creating an ecosystem of gamers, in essence, a large community that has easy and affordable access to games, consoles, and peripherals.",
+  "ourOfferings": "Our Offerings",
+  "best": "Best-in-class consoles, games, and accessories",
+  "longText3": "If you're in the market for brand-new or pre-owned consoles and games, we've got all your bases covered. From Sony's finest to Nintendo and Microsoft's latest drops, we've got all you want to cop. Along with knock-off prices on our products, we offer free-shipping across the nation and 1-day delivery in select cities.",
+  "sellYourOld": "Sell your old games and consoles",
+  "longText4": "When you're looking to offload your old games or consoles, we welcome you with open arms. You can sell your old games and consoles for either cash or credit for your trade-ins. At Gamenation, we're also starting a new service where you can sell your old gaming PC's peripherals, and components for cash or credit.",
+  "ourPillars": "Our Pillars",
+  "customerObsession": "Customer Obsession: We want our customers to feel and think at all times that they are getting absolute value for money.",
+  "valueForMoney": "Value For Money: Every innovation. Every iteration. Everything we do here at Gamenation is solely centered around customer satisfaction. We aim to provide our customers with the cleanest and finest user journey while transacting with us.",
+  "passion": "Passion: It's easier said than done to state that 'Passion' forms the bedrock of our organization. Be it a new service we're working on, or a new employee we are hiring, we ensure that passion is at the very core of all our endeavours.",
+  "evolution": "Evolution: One of our cornerstones is to be in a perpetual state of learning and evolution. Innovating at every get-go, we strive to keep evolving our services and offerings.",
+  "affordable": "Affordable And Accessible Does Not Mean Average: The stigma that Gaming Consoles, Gaming PC's or Gaming in general is for the wealthy is a taboo we are constantly trying to break.",
+  "loggedOut": "Logged out successfully",
+  "loginSuccessfull": "Login Successfull",
+  "loginFailed": "Login failed",
+  "invalidEmail": "Invalid email or password",
+  "login": "LOGIN",
+  "notRegistered": "Not registered yet?",
+  "registerHere": "Register here",
+  "fill": "Please fill in all fields",
+  "registerFail": "Registration Failed",
+  "alreadyRegister": "This email  already registered. Please use a different email",
+  "registerSuccess": "You Have Been Registered Successfully",
+  "register": "REGISTER",
+  "alreadyRegistered": "Already Registered",
+  "loginHere": "Login here",
+  "surname": "Surname",
+  "password": "Password",
+  "signIn": "Sign in"
 }
