--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -60,5 +60,37 @@
   "addToCart": "Добавить в корзину",
   "productAdd": "Товар добавлен в корзину",
   "productAddSell": "Товар добавлен в корзину!",
-  "nowSell": "Теперь вы можете продавать свой продукт"
+  "nowSell": "Теперь вы можете продавать свой продукт",
+  "keepGoing": "Продолжать идти",
+  "whoWeAre": "Кто мы?",
+  "longText": "Мы — команда увлеченных геймеров и профессионалов, которые стремятся предоставить геймерам доступный и приятный игровой опыт. Игровая индустрия долгое время рекламировалась как дорогое увлечение для богатых. Мы хотим сломать это табу и стигму. Мы хотим дать геймерам больше возможностей. Мы хотим, чтобы геймеры испытали все самое лучшее в этой индустрии, не опустошая свои карманы и сердца.",
+  "longText2": "Все эти начинания, которые мы предпринимаем, являются ревностными и честными усилиями по созданию экосистемы геймеров, по сути, большого сообщества, имеющего простой и доступный доступ к играм, консолям и периферийным устройствам.",
+  "ourOfferings": "Наши предложения",
+  "best": "Лучшие в своем классе консоли, игры и аксессуары",
+  "longText3": "Если вы ищете новые или бывшие в употреблении консоли и игры, у нас есть все, что вам нужно. От лучших моделей Sony до последних новинок Nintendo и Microsoft — у нас есть все, что вы хотите купить. Помимо скидочных цен на нашу продукцию, мы предлагаем бесплатную доставку по всей стране и доставку в течение 1 дня в некоторых городах.",
+  "sellYourOld": "Продайте свои старые игры и консоли",
+  "longText4": "Если вы хотите избавиться от своих старых игр или консолей, мы приветствуем вас с распростертыми объятиями. Вы можете продать свои старые игры и консоли за наличные или в кредит для обмена. В Gamenation мы также запускаем новую услугу, где вы можете продать периферийные устройства и компоненты вашего старого игрового ПК за наличные или в кредит.",
+  "ourPillars": "Наши столпы",
+  "customerObsession": "Одержимость клиентами: мы хотим, чтобы наши клиенты всегда чувствовали и думали, что они получают абсолютное соотношение цены и качества.",
+  "valueForMoney": "Соотношение цены и качества: Каждое нововведение. Каждая итерация. Все, что мы делаем здесь, в Gamenation, сосредоточено исключительно на удовлетворении потребностей клиентов. Мы стремимся предоставить нашим клиентам самый чистый и лучший пользовательский опыт при совершении транзакций с нами.",
+  "passion": "Страсть: Легче сказать, чем сделать, заявить, что «Страсть» является основой нашей организации. Будь то новая услуга, над которой мы работаем, или новый сотрудник, которого мы нанимаем, мы гарантируем, что страсть лежит в основе всех наших начинаний.",
+  "evolution": "Эволюция: Один из наших краеугольных камней — постоянное обучение и эволюция. Инновации на каждом шагу, мы ,стремимся продолжать развивать наши услуги и предложения.",
+  "affordable": "Доступность и доступность не означает посредственность: стереотип о том, что игровые консоли, игровые ПК или игры в целом предназначены для богатых, — это табу, которое мы постоянно пытаемся разрушить.",
+  "loggedOut": "Успешно вышел из системы",
+  "loginSuccessfull": "Вход успешный",
+  "loginFailed": "Ошибка входа",
+  "invalidEmail": "Неверный адрес электронной почты или пароль",
+  "login": "АВТОРИЗОВАТЬСЯ",
+  "notRegistered": "Еще не зарегистрированы?",
+  "registerHere": "Зарегистрируйтесь здесь",
+  "fill": "Пожалуйста, заполните все поля",
+  "registerFail": "Регистрация не удалась",
+  "alreadyRegister": "Этот адрес электронной почты уже зарегистрирован. Пожалуйста, используйте другой адрес электронной почты",
+  "registerSuccess": "Вы успешно зарегистрированы",
+  "register": "Зарегистрироваться",
+  "alreadyRegistered": "Уже зарегистрирован",
+  "loginHere": "Войти здесь",
+  "surname": "Фамилия",
+  "password": "Пароль",
+  "signIn": "Войти"
 }
